# Engine

./: .gitignore  DbvmWindows  normalWindows.txt
Cheat Engine/: DBK64SecondaryLoader.pas  LuaHandler.pas  LuaInternet.pas  MainUnit.lfm  MainUnit.pas  MainUnit2.pas  MemoryBrowserFormUnit.lfm  PointerscannerSettingsFrm.lfm  StructuresFrm2.lfm  aboutunit.lfm  aboutunit.lrt  cetranslator.pas  cheatengine.lpi  cheatengine.lpr  first.pas  formPointerOrPointeeUnit.lfm  formsettingsunit.dfm  formsettingsunit.lfm  formsettingsunit.lrt  frameHotkeyConfigUnit.lfm  frmAdConfigUnit.lfm  frmAdConfigUnit.lrt  frmBusyUnit.lfm  frmBusyUnit.lrt  frmDriverLoadedUnit.lfm  frmDriverLoadedUnit.lrt  frmExeTrainerGeneratorUnit.lfm  frmExeTrainerGeneratorUnit.lrt  frmExeTrainerGeneratorUnit.pas  frmUltimap2Unit.lfm  (+9 more)
dbvm/vmm/: .gitignore  AGENTS.md  AMD_DETECTION_FIXES.md  BN_HYPERION_BOOKMARKS.md  CMakeLists.txt  DBVM_BEHAVIORAL_DETECTIONS_PATCHLIST.md  DBVM_DEBUG_REGISTER_DETECTION.md  DBVM_DETECTION_SUMMARY.txt  DBVM_STEALTH_MODIFICATIONS.md  README.md  ROBLOX_DETECTION_FIXES.md  ROBLOX_VMCALL_ANALYSIS.md  analyze_offsets.py  common.h  dbvm_behavioral_patcher.py  dbvm_detection_notes.txt  epthandler.c  find_dbvm_check.py  main.c  msrnames.h  roblox_dbvm_analysis.md  tmp_list.txt  tmp_readme.txt  vmcall.c  vmcall.h  vmevent_invalidstate.c  vmeventhandler.c  vmeventhandler.h  vmeventhandler_amd.c  vmm.code-workspace  vmma.asm  vmmhelper.h  vmxsetup.c
dbvm/vmm/detectors/: DBVM_PASSWORD_FREE_DETECTION.md  README.md  dbvm_detect.c  dbvm_detect.h  dbvm_detect_cli.c  dbvm_harvest.c  dbvm_harvest.h
(+39 files in other folders)
